[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "uhoo-homeassistant"
description = "uHoo integration for Home Assistant"
authors = [
    {name = "Christopher Sacca", email = "csacca@csacca.net"},
    {name = "Andrew Leech", email = "andrew@alelec.net"},
    {name = "Simone Rescio"},
]
readme = "README.md"
dependencies = [
  "aiohttp>=3.7.4",
  "click>=8.0.1",
  "pycryptodome>=3.10.1",
  "pyyaml>=6.0",
  "yarl>=1.8.1",
]
dynamic = ["version"]  # Important for setuptools to handle version

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["custom_components"]
include = ["uhoo"]
namespaces = false

[tool.isort]
profile = "black"
indent = "    "
force_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["custom_components", "tests", "homeassistant"]
forced_separate = "tests"
combine_as_imports = true

[tool.mypy]
pretty = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov custom_components.uhoo"
console_output_style = "count"
timeout = "9"
testpaths = ["tests"]

# Dev dependencies are handled separately during development.
# You don't list them in the install_requires for a regular pip install.
# You would install them with pip install -e .[dev]
[project.optional-dependencies]
dev = [
    "flake8>=3.9.2",
    "black>=21.9b0",
    "isort>=5.9.3",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
    "pytest",
    "pytest-homeassistant-custom-component",
    "homeassistant>=2023.1.7",
    "flake8-docstrings>=1.6.0",
    "pylint>=2.11.1",
    "pydocstyle>=6.1.1",
]
